# Flim

./: .gitignore  CMakeLists.txt  README.md  debug-env.yml  env.yml  setup-dev.sh
cmake/: Dependencies.cmake
examples/: example_bouncing_teddys.cc  example_particles.cc  simple_buffer_kokkos.cc
shaders/: CMakeLists.txt  default.comp  default.frag  default.vert  fvm.frag  fvm.vert  outlined.frag  particle.frag  particle.vert  point.frag  point.vert  shader.frag  shader.vert
simulations/: CMakeLists.txt  main.cc
simulations/cloth/: CMakeLists.txt  cloth.cc
simulations/default/: CMakeLists.txt  default.cc
simulations/fvm/: CMakeLists.txt  cartesian_grid_solver.cc  cartesian_grid_solver.hh  fvm.cc  navier_stokes_solver.cc  navier_stokes_solver.hh
simulations/fvm/ast/: fmv_solver.cc  fmv_solver.hh  fvm_ast.cc  fvm_ast.hh  fvm_mesh.cc  fvm_mesh.hh  fvm_stack.cc  fvm_stack.hh
simulations/fvm/latex/: FVM.tex  Makefile  discretization.tex  stokes_equation.tex  tmp.tex
simulations/fvm/utils/: csr.hh
simulations/heat/: CMakeLists.txt  main.cc
simulations/heat/latex/: Makefile  heat.aux  heat.tex
simulations/lod/: main.cc
simulations/particles/: particles.cc
src/: app.hh  consts.hh  fwd.h  fwd.hh  hip.cc  main.cc  target.cc
src/api/: flim_api.cc  flim_api.hh  fwd.hh  parameters.hh  scene.cc  scene.hh  transform.cc  transform.hh
src/api/bvh/: bvh.hh
src/api/mesh/: mesh.cc  mesh.hh  mesh_utils.cc  mesh_utils.hh
src/api/parameters/: base_params.cc  base_params.hh  compute_params.cc  compute_params.hh  render_params.cc  render_params.hh
src/api/render/: material.cc  material.hh  mesh.cc  mesh.hh  mesh_utils.cc  mesh_utils.hh  renderable.hh
src/api/shaders/: shader.cc  shader.hh
src/api/tree/: camera.cc  camera.hh  camera_object.cc  camera_object.hh  free_camera_object.cc  free_camera_object.hh  instance.cc  instance.hh  instance_object.hh  root_object.hh  tree_object.hh
src/kokkos/: mesh_navigator.cc  mesh_navigator.hh  renderer_accesser.hh
src/kokkos/utils/: CSR.hh
src/utils/: backend.hh  checks.hh  geometry.hh  types.hh
src/vulkan/: app.cc  app.hh  base_manager.hh  context.cc  context.hh  context_holder.cc  context_holder.hh  device_manager.cc  device_manager.hh  extension_manager.cc  extension_manager.hh  proxy.cc  proxy.hh  surface_manager.cc  surface_manager.hh  window_manager.cc  window_manager.hh
src/vulkan/buffers/: attribute_descriptors.cc  attribute_descriptors.hh  buffer_manager.cc  buffer_manager.hh  buffer_utils.cc  buffer_utils.hh  descriptor_holder.cc  descriptor_holder.hh  descriptors.cc  descriptors.hh  descriptors_manager.cc  descriptors_manager.hh  params_utils.cc  params_utils.hh  texture_buffer_manager.cc  texture_utils.cc  texture_utils.hh  uniform_buffer_manager.cc  uniform_descriptors.cc  uniform_descriptors.hh  vertex_buffer_manager.cc
src/vulkan/computing/: computer.cc  computer.hh
src/vulkan/device/: device_manager.hh  device_manager_logical.cc  device_manager_physical.cc  device_utils.hh  swap_chain.cc  swap_chain.hh
src/vulkan/graphics/: command_pool.cc  command_pool.hh  pipeline.cc  pipeline.hh  shader_utils.cc  vertex_shader.cc
src/vulkan/gui/: gui_manager.cc  gui_manager.hh
src/vulkan/rendering/: buffer_manager.cc  buffer_manager.hh  command_pool_manager.cc  command_pool_manager.hh  pipeline.cc  pipeline.hh  pipeline_manager.cc  pipeline_manager.hh  pl_vertex_input.cc  renderer.cc  renderer.hh  shader_utils.hh  utils.hh
src/vulkan/swap_chain/: surface_manager.cc  surface_manager.hh  swap_chain_manager.cc  swap_chain_manager.hh  swap_chain_utils.hh
